--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap");
 
-:root{
+:root {
   --primary: #efb6b2;
   --secondary: #4e4e4e;
   --error: #ff4a4a;
 }
 
 /* base styles & title */
-body{
+body {
   font-family: "Noto Serif";
   color: var(--secondary);
 }
-.App{
+.App {
   max-width: 960px;
   margin: 0 auto;
 }
-.title h1{
+.title h1 {
   color: var(--primary);
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: normal;
 }
-.title h2, .title p{
+.title h2,
+.title p {
   text-align: center;
 }
-.title h2{
+.title h2 {
   margin-top: 60px;
   font-size: 2.6rem;
 }
 
 /* upload form styles */
 
-
 /* progress bar styles */
-
+.progress-bar {
+  height: 5px;
+  background: var(--primary);
+  margin-top: 20px;
+}
 
 /* image grid styles */
-
 
 /* modal styles */
